Fixes paddingissues/color blocks spacing

--- a/sfa/_sass/_base.scss
+++ b/sfa/_sass/_base.scss
@@ -205,7 +205,7 @@ h1{
     font-size: 42px;
     font-weight: 500;
     /*margin: 0 0 .6em 0;*/
-    line-height: 1.4em;
+    /*line-height: 1.4em;*/
 }
 
 h2{
